postgres-macros/tests/fail/extra_named.stderr
error: argument never used
 --> tests/fail/extra_named.rs:2:47
  |
2 |     sqlm_macros::sql!("{foo}", foo = 1, bar = 2);
  |                                               ^
